--- a/css/formula.css
+++ b/css/formula.css
@@ -1,3 +1,4 @@
+
 body
 {
 	margin : auto;
@@ -12,8 +13,9 @@ h1
 	color : 	#00FFFF;
 	font-family : "Century Gothic", Georgia, 'Times New Roman', Times, serif;
   font-size : 60px;
-  letter-spacing-spacing : 15px;
+  letter-spacing : 15px;
   text-shadow:1px 1px 0px #ffeeee, 2px 2px 0px #000000;
+  text-align : center;
 	
 }
 h2
